--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -24,7 +24,7 @@
 }
 
 .projects .section-title {
-  text-align: center;
+  text-align: left;
   margin-bottom: 0;
   font-size: 32px;
   font-weight: 500;
